CMTYAEM-339 Event Template: Center Alignment Bug

--- a/ui.frontend/src/main/webpack/site/_base.scss
+++ b/ui.frontend/src/main/webpack/site/_base.scss
@@ -15,6 +15,8 @@ body {
 
 main {
     max-width: 1200px;
+    margin: 0 auto;
+    float: none !important;
 
     @media (max-width: $screen-small) {
         padding: 4.0em 1.0em;
@@ -55,9 +57,4 @@ h2 {
 h3 {
     font-size: 16px;
     line-height: 22px;
-}
-
-#main-container {
-    margin: 0 auto;
-    float: none;
 }
